--- a/package.json
+++ b/package.json
@@ -14,14 +14,19 @@
   "author": "Thadeu Castelo Branco Ramos",
   "license": "ISC",
   "dependencies": {
+    "argon2": "^0.28.4",
+    "celebrate": "^15.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^15.0.0",
     "express": "^4.17.2",
     "express-async-errors": "^3.1.1",
     "mysql": "^2.18.1",
+    "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.6.0",
     "typeorm": "^0.2.41"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.12.0",
