Adicionando linha no compose para permitir instalacao do mysql no mac m1

--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,8 @@ TYPEORM_MIGRATIONS_DIR=./src/shared/database/typeorm/migrations
 ########## LOCAL DATABASE ##########
 MYSQL_ROOT_PASSWORD=@StrongSampleExample123
 TYPEORM_CONNECTION=mysql
-TYPEORM_HOST=localhost
-TYPEORM_USERNAME=
+TYPEORM_HOST=database
+TYPEORM_USERNAME=root
 TYPEORM_PASSWORD=
 TYPEORM_DATABASE=
 TYPEORM_PORT=3306
