--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
-version: '3.8'
+version: '3'
 
 services:
   database:
+    platform: linux/x86_64
     image: mysql:5.7
     container_name: sample_database
     restart: always
