atualizando env example

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,33 @@
-########## DATABASE ##########
+########## TYPEORM PATHS ##########
 TYPEORM_ENTITIES=./src/modules/**/database/typeorm/entities/*.ts
 TYPEORM_MIGRATIONS=./src/shared/database/typeorm/migrations/*.ts
 TYPEORM_MIGRATIONS_DIR=./src/shared/database/typeorm/migrations
 
-########## LOCAL DATABASE ##########
-MYSQL_ROOT_PASSWORD=@StrongSampleExample123
+########## TYPEORM CONFIG ##########
 TYPEORM_CONNECTION=mysql
+TYPEORM_LOGGING=false
+TYPEORM_SYNCHRONIZE=false
+
+########## LOCAL DATABASE ##########
 TYPEORM_HOST=database
-TYPEORM_USERNAME=root
-TYPEORM_PASSWORD=
-TYPEORM_DATABASE=
 TYPEORM_PORT=3306
+TYPEORM_USERNAME=root
+TYPEORM_PASSWORD=sample
+TYPEORM_DATABASE=sample
+
+########## TESTING DATABASE ##########
+# TYPEORM_HOST=
+# TYPEORM_PORT=
+# TYPEORM_USERNAME=
+# TYPEORM_PASSWORD=
+# TYPEORM_DATABASE=
+
+########## PROD DATABASE ##########
+# TYPEORM_HOST=
+# TYPEORM_PORT=
+# TYPEORM_USERNAME=
+# TYPEORM_PASSWORD=
+# TYPEORM_DATABASE=
 
 ########## SERVER ##########
 APP_PORT=3333
