--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^15.0.0",
     "express": "^4.17.2",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.6.0",
