--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "curupira",
+  "name": "@curupira/create-backend-ts",
   "version": "1.0.0",
   "description": "",
   "main": "src/shared/server.ts",
