--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "name": "curupiras",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "",
-  "keywords": ["Express", "Template", "Back-end", "TypeScript", "TypeORM"],
+  "keywords": [
+    "Express",
+    "Template",
+    "Back-end",
+    "TypeScript",
+    "TypeORM"
+  ],
   "author": "Thadeu Castelo Branco Ramos <thadeucbr@gmail.com>",
   "license": "ISC",
   "bugs": {
@@ -20,7 +26,8 @@
     "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/server.ts",
     "start": "ts-node -r tsconfig-paths/register --transpile-only src/shared/server.ts",
     "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
-    "migrate": "npm run typeorm -- migration:run"
+    "migrate": "npm run typeorm -- migration:run",
+    "lint": "eslint --fix --ext .js,.ts ."
   },
   "dependencies": {
     "argon2": "^0.28.4",
@@ -39,6 +46,9 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
+    "@typescript-eslint/eslint-plugin": "^5.15.0",
+    "@typescript-eslint/parser": "^5.15.0",
+    "eslint": "^8.11.0",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.12.0",
     "typescript": "^4.5.5"
