Adicionando beta tag

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "curupiras",
-  "version": "1.0.3",
+  "version": "1.0.3-beta.0",
   "description": "",
   "keywords": [
     "Express",
