--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "curupiras",
-  "version": "1.0.3-beta.3",
+  "version": "1.1.0",
   "description": "Curupiras é um template back-end que utiliza Express e TypeScript",
   "keywords": [
     "Express",
